# dotfiles

./: .bashrc  .gitconfig  .gitignore  .gitignore_global  .p10k.zsh  .prettierrc  .profile  .python-testing-framework  .ruff.toml  .tmux.conf  .viminfo  .vimrc  .zsh_aliases  .zshrc  Dockerfile  alpine-ssh  ban_ssl  error  install_alpine_dbt  install_alpine_ssh  install_dbt  install_devcontainer  install_dotfiles  install_duckdb  install_fonts.zsh  install_node  install_node.sh  install_node.zsh  install_nvim  install_nvim.zsh  install_oh_my_zsh  install_python  install_python.zsh  install_python_alpine  install_rust_analyzer  install_rye  install_snowsql  jessica.vim  nvim-plugins.lua  nvim-terminal.lua  (+7 more)
dbt-venv/: pyvenv.cfg
home/: .vimrc
home/.config/: black
nvim/: lazy-lock.json
python/: config-requirements.txt  pyproject.toml  setup.cfg
